[gd_scene load_steps=3 format=3 uid="uid://celd3efat3o76"]

[ext_resource type="Script" uid="uid://dgnaq5rhk3efo" path="res://Scripts/main_menu.gd" id="1_a3sw6"]
[ext_resource type="Texture2D" uid="uid://b5u8cots433u8" path="res://Sprites/MM.png" id="1_r8uxs"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_a3sw6")

[node name="Button" type="Button" parent="."]
offset_left = 22.0
offset_top = 27.0
offset_right = 326.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 90
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
offset_left = 23.0
offset_top = 179.0
offset_right = 374.0
offset_bottom = 311.0
theme_override_font_sizes/font_size = 90
text = "Options"
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="."]
offset_left = 28.0
offset_top = 488.0
offset_right = 348.0
offset_bottom = 620.0
theme_override_font_sizes/font_size = 90
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="."]
offset_left = 24.0
offset_top = 333.0
offset_right = 395.0
offset_bottom = 465.0
theme_override_font_sizes/font_size = 90
text = "Creditos"
metadata/_edit_use_anchors_ = true

[node name="Mm" type="Sprite2D" parent="."]
position = Vector2(795, 296)
scale = Vector2(1.03333, 0.514981)
texture = ExtResource("1_r8uxs")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
